tdf#66765 - FILESAVE: saving sheet with some queries in it takes forever

This takes the save time from 5m30 to 1s.

We were firing up the editeng stuff for every single style entry, when
most of the style entries share the same cell.

Change-Id: Id11af0b7f5646ff7ccdf1b85014fa384b0465054
Reviewed-on: https://gerrit.libreoffice.org/73239
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Noel Grandin <noel.grandin@collabora.co.uk>